Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.07.2024 14:39:41</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.07.2024 07:04:24</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -8,16 +8,19 @@
 <h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová s párkem a krutony</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s houbami a vařeným vejcem</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Vepřová kotleta bez kosti zapečená se salámem (Herkules) a  uzeným sýrem, mačkané brambory s cibulkou</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněný paprikový lusk v rajské omáčce, dušená jasmínová rýže</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové placky maštěné cibulkou, bílé zelí</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí játra na roštu, smažené bramborové plátky, volské oko, feferonkový dip</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Špikovaná vepřová panenka, květákové pyré se sýrem a máslem, grilovaná karotka</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine "AMATRICIANA" s tomatovou omáčkou, parmskou šunkou a červenou cibulkou, parmazán</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený hermelín v sýrovém těstíčku, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Quesadilla plněná kuřecím masem,česnekovým dipem, strouhaným sýrem, kukuřicí a papričkami jalapeňos, hranolky, tatarka</td><td class="menuPrice">183,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené řízky z kuřecích prsou, vařené nové brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřový guláš s cibulí a feferonkou, kynuté houskové knedlíky</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Španělská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové výpečky, variace knedlíků maštěné cibulkou, bílé zelí</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Steak z kuřecích prsou,sýrové  grusetky promíchané česnekem a brokolicí, zakysaná smetana</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše kynuté ovocné knedlíky, vanilková omáčka, šlehačka, karamel</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Biftek z pravé hovězí svíčkové na jemné sýrové omáčce s kukuřicí, restované špecle</td><td class="menuPrice">210,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů promíchaný majonézovým dresinkem, opečenou anglickou slaninou, filírované kuřecí prso, vařené vejce, strouhaný parmazán</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 137,- nebo 150g  Steak z vepřové pečeně za 137,-  (pro nesledující za 177,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem s šnitlíkem, tatarka</td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z vepřové pečeně se žampiony a sýrem, smažené hranolky</td><td class="menuPrice">137,-/177,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 137,- nebo 150g  Steak z vepřové pečeně za 137,-  (pro nesledující za 177,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem s šnitlíkem, tatarka</td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z vepřové pečeně se žampiony a sýrem, smažené hranolky</td><td class="menuPrice">137,-/177,-</td></tr></tbody>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,.</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Cool nealko grep alk. 0,5%</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight">0,3-0,3l</td><td class="menuName">Citonáda</td><td class="menuPrice">23,-/29,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Naše Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Cool nealko grep alk. 0,5%</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight">0,5-0,3l</td><td class="menuName">Citronáda</td><td class="menuPrice">23,-/29,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -29,13 +32,16 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
 Volba Sládků<br>
 Kozel tmavý<br>
 Cider Kingswood<br>
 <br>
 Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -45,7 +51,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Sobota 20.7.2024 </div>
+<div class="nadpis">Neděle 21.7.2024 </div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -58,7 +64,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 20.7.2024 </div>
+<div class="nadpis">Neděle 21.7.2024 </div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -81,72 +87,8 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_22829">Pátek 19. 07.</a>
 </div>
-</div>
-<table class="list js-bookmark-block" id="day_22829">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Hovězí vývar, </span>
-<span class="allergen">(A: 1, 3, 7, 9)</span>
-<p class="desc">fritátové nudle </p>
-</td>
-<td class="price cond">
-        55 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Pikantní vepřová směs </span>
-<span class="allergen">(A: 3, 6)</span>
-<p class="desc">s dušenou rýží</p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">200g</td>
-<td class="name">
-<span class="title cond">Smažené žampiony, </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">vařené brambory a tatarská omáčka</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">300g</td>
-<td class="name">
-<span class="title cond">Penne all Arrabbiata,  </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">sypané parmazánem</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Trhané vepřové maso v naší BBQ omáčce, </span>
-<span class="allergen">(A: 3, 6, 7, 10)</span>
-<p class="desc">hranolky s čedar omáčkou </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">200g</td>
-<td class="name">
-<span class="title cond">Burger s asijským konfitovaným bůčkem,      </span>
-<span class="allergen">(A: 1, 3, 7, 10, 11, 12)</span>
-<p class="desc">hoisin omáčkou a zeleninovými hranolky                          </p>
-</td>
-<td class="price cond">
-        189 Kč    </td>
-</tr>
-</table>
+<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
 </div>
 </section>
 </td>
