--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.07.2024 09:02:37</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.07.2024 09:32:07</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -109,7 +109,7 @@
 <section id="Rybarna"></section><a href="#top">&#8635;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Indicka korma s kousky rybich filetu {hejk, sumecek, sled}, fazolovymi lusky, paprikami, orisky, zazvorem a kokosovym mlekem, jasminova ryze 165</li><li>Peceny filet z cerstveho norskeho lososa s rajcatovo-ananasovou salsou, korenena ryze, salatek 199</li><li>Zapecena cuketa na turecky zpusob plnena hovezim masem, s rajcaty a bylinkami v lehke rajcatove omacce s bazalkou, korenena ryze, salatek 169</li><li>Grilovane medailonky z kurecich prsou s merunkovym catny, pecene brambory, salatek 199</li><li>Indicky dal z cervene cocky se sazenym vejcem, pak coj a rajcaty, salatek 169</li></ol>
+<ol><li>Indicka korma s kousky rybich filetu {hejk, sumecek, sled}, fazolovymi lusky, paprikami, orisky, zazvorem a kokosovym mlekem, jasminova ryze 169</li><li>Peceny filet z cerstveho norskeho lososa s rajcatovo-ananasovou salsou, korenena ryze, salatek 199</li><li>Zapecena cuketa na turecky zpusob plnena hovezim masem, s rajcaty a bylinkami v lehke rajcatove omacce s bazalkou, korenena ryze, salatek 169</li><li>Grilovane medailonky z kurecich prsou s merunkovym catny, pecene brambory, salatek 199</li><li>Indicky dal z cervene cocky se sazenym vejcem z farmy, pak coj a rajcaty, salatek 169</li></ol>
 </td>
 </tr>
 </table>
@@ -184,7 +184,7 @@
 <p class="desc">demi-glace omáčka a naše hranolky</p>
 </td>
 <td class="price cond">
-        189 Kč    </td>
+        199 Kč    </td>
 </tr>
 </table>
 </div>
