--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.07.2024 07:02:39</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.07.2024 07:32:38</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -133,65 +133,10 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_22848">Úterý 23. 07.</a>
-</div>
 <div class="item js-bookmark active">
 <a class="link js-bookmark-switcher" href="#day_22862">Středa 24. 07.</a>
 </div>
 </div>
-<table class="list js-bookmark-block" id="day_22848">
-<tr>
-<td class="volume">200g</td>
-<td class="name">
-<span class="title cond">Španělský ptáček </span>
-<span class="allergen">(A: 1, 3, 10)</span>
-<p class="desc">s dušenou rýží                                            </p>
-</td>
-<td class="price cond">
-        189 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Krůtí steak</span>
-<span class="allergen">(A: 1, 7, 9)</span>
-<p class="desc">s bylinkovým máslem a grilovanou zeleninou                                </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">3ks</td>
-<td class="name">
-<span class="title cond">Domácí meruňkové knedlíky</span>
-<span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">se strouhaným tvarohem, cukrem a máslem </p>
-</td>
-<td class="price cond">
-        159 Kč    </td>
-</tr>
-<tr>
-<td class="volume">1ks</td>
-<td class="name">
-<span class="title cond">Mexická tortilla </span>
-<span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">se smaženými kuřecími stripsy,  pikantní salsa a hranolky </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">350g</td>
-<td class="name">
-<span class="title cond">Míchaný zeleninový salát</span>
-<span class="allergen">(A: 8)</span>
-<p class="desc">s najemno  krájeným hovězím Angus steakem </p>
-</td>
-<td class="price cond">
-        189 Kč    </td>
-</tr>
-</table>
 <table class="list js-bookmark-block" id="day_22862" style="display:table;">
 <tr>
 <td class="volume"></td>
@@ -212,6 +157,46 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 <td class="price cond">
         159 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Medailonky z vepřové panenky, </span>
+<span class="allergen">(A: 1, 3, 7, 12)</span>
+<p class="desc">pepřová omáčka a smetanové brambory </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">200g</td>
+<td class="name">
+<span class="title cond">Kuřecí špíz </span>
+<span class="allergen">(A: 1, 3, 7, 10, 12)</span>
+<p class="desc">prokládaný slaninou a zeleninou, hranolky a tatarská omáčka </p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">300g</td>
+<td class="name">
+<span class="title cond">Špagety Carbonara             </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">(A: 1, 3, 7)</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">350g</td>
+<td class="name">
+<span class="title cond">Míchaný zeleninový salát</span>
+<span class="allergen">(A: 8)</span>
+<p class="desc">s najemno  krájeným hovězím Angus steakem </p>
+</td>
+<td class="price cond">
+        189 Kč    </td>
 </tr>
 </table>
 </div>
@@ -236,7 +221,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="CSAntal"></section><a href="#top">&#8635;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
 <tr>
 <td>
-None
+<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Thajská polévka se zeleninou a kokosovým mlékem</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Moravský vrabec, špenát, bramborové knedlíky</td><td>155 Kč</td></tr><tr><td>150g Kuřecí steak zapečený rajčaty a mozzarellou, pečené brambory, bylinkový dip</td><td>159 Kč</td></tr><tr><td>150g Krůtí smetanové soté se zeleninou, jasmínová rýže</td><td>149 Kč</td></tr><tr><td>3ks Kynuté borůvkové knedlíky, strouhaný tvaroh, cukr, máslo</td><td>115 Kč</td></tr><tr><td><h3>Buffet samoobslužný na váhu -- FIT</h3></td><td> </td></tr><tr><td>Pečené dýňové měsíčky</td><td> </td></tr><tr><td>Zapečené houby s rýží a zeleninou</td><td> </td></tr><tr><td>Bulgur s klíčky, brokolicí a zeleninou</td><td> </td></tr><tr><td>Kmínová pečená zelenina s tahini</td><td> </td></tr><tr><td>Vepřová plec po asijsku</td><td> </td></tr><tr><td>Jasmínová rýže</td><td> </td></tr><tr><td><h3>Týdenní nabídka</h3></td><td> </td></tr><tr><td>domácí těstoviny připravované na objednávku 150g / 300g: Tagliatelle</td><td>145 Kč</td></tr><tr><td>Con pollo e pesto (kuřecím masem, pesto)</td><td> </td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
 </td>
 </tr>
 </table>
